hphp/test/zend7/Zend/tests/closure_005.php.expectf
3
3
5
5
7
7
Destroyed

Fatal error: %s
Stack trace:
#0 %s(%d): A::{closure}()
#1 {main}
  thrown in %sclosure_005.php on line 28